# register-description-tools

./: Cargo.toml  README.md
src/: config.rs  logic.rs  main.rs  ui.rs
src/logic/: validation.rs
src/logic/codegen/: rust.rs
src/logic/codegen/rust/: register.rs  register_trait.rs
src/logic/validation/: register.rs  register_description.rs
src/ui/: editor.rs  field.rs  object.rs  validate.rs
